[refactor] exploited java > 11 features